--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "framer-motion": "^6",
+    "framer-motion": "4.1.17",
     "next": "12.0.10",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
@@ -33,6 +33,7 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-storybook": "^0.5.6",
     "prettier": "^2.5.1",
     "typescript": "4.5.5"
   }
