--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.26.0",
     "framer-motion": "4.1.17",
     "next": "12.0.10",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
